--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.20.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
+    "@imagekit/next": "^2.1.3",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -23,18 +27,25 @@
     "@tsparticles/slim": "^3.8.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "dedent": "^1.7.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "firebase": "^11.2.0",
+    "imagekit": "^6.0.0",
     "lucide-react": "^0.474.0",
     "motion": "^12.23.6",
     "next": "15.1.6",
     "next-themes": "^0.4.6",
+    "openai": "^5.22.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
