--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
     "@codesandbox/sandpack-themes": "^2.0.21",
+    "@google/generative-ai": "^0.24.1",
     "@imagekit/next": "^2.1.3",
     "@neondatabase/serverless": "^0.10.4",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@paypal/react-paypal-js": "^8.9.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-oauth/google": "^0.12.2",
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/postcss": "^4.1.11",
@@ -29,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.27.3",
     "dedent": "^1.7.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
@@ -41,6 +45,7 @@
     "openai": "^5.22.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^7.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
